--- a/r/01-column_types.Rmd
+++ b/r/01-column_types.Rmd
@@ -1,9 +1,25 @@
+How big are they?
+
+```{r shape}
+ggplot(socrata) + aes(x = ncol, y = nrow, size = downloadCount, color = portal) + geom_point()
+```
+
+A bunch have no rows nor columns.
+
+```
+Plot here
+```
+
+Which ones get more views?
+
 ```{r count_v_date}
 ggplot(socrata) + aes(x = createdAt, y = viewCount, color = portal) +
   geom_point() +
   scale_x_date('Dataset creation date') +
   scale_y_log10('Dataset view count')
 ```
+
+What are their column types?
 
 ```{r ncol}
 socrata.column.types <- subset(melt(socrata), strtrim(variable, 5) == 'ncol.')
@@ -44,3 +60,18 @@ levels(socrata.column.types$variable) <- c(
   "ncol.text", "ncol.url"
 ))
 ```
+
+Popular datasets by portal
+
+
+
+  socrata[order(socrata$downloadCount, decreasing = T),][1:10,c('portal','id','nrow','ncol','downloadCount')]
+
+
+Datasets with lots of rows:
+
+  socrata[order(socrata$ncol, decreasing = T),][1:40,c('portal','id','nrow','ncol','downloadCount')]
+
+We should reshape these.
+
+https://data.illinois.gov/Transportation/IDOT-Published-For-The-Record-2011-Spot-Improvemen/ss2t-nnma?
