--- a/r/01-column_types.Rmd
+++ b/r/01-column_types.Rmd
@@ -75,3 +75,11 @@ Datasets with lots of rows:
 We should reshape these.
 
 https://data.illinois.gov/Transportation/IDOT-Published-For-The-Record-2011-Spot-Improvemen/ss2t-nnma?
+
+Same dataset in opendata.socrata.com and a different portal
+
+```
+                      portal        id    nrow ncol downloadCount
+7790       dati.lombardia.it 3syc-54zf     234   56          1675
+10425   opendata.socrata.com 54y8-wyde     234   56             9
+```
