try erb. it works

--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -1,10 +1,11 @@
 Analyze all the datasets
 =====
+<% root = 'https://github.com/tlevine/socrata-analysis/tree/master/' %>
+
 I downloaded the metadata files for most of the datasets across most of the Socrata data portals.
 Here I explain how I did that and present an summary of the sorts of data that we find in the portals.
 
 ## Acquiring the data
-
 
 ## Initial analysis
 
