--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -131,7 +131,7 @@ looking at the following variables, each of which has one observation per datase
 ### Sizes
 Let's first see which portals are biggest. Which has the most datasets?
 
-```
+```{r big.portals.datasets}
 socrata$portal <- factor(socrata$portal,
   levels = names(sort(table(socrata$portal), decreasing = T)))
 
@@ -142,7 +142,7 @@ ggplot(socrata) + aes(x = portal) + geom_bar() + coord_flip() +
 
 Which portals get the most downloads?
 
-```
+```{r big.portals.downloads}
 .download <- ddply(socrata, 'portal', function(df) {
   c(datasets = nrow(df), downloads = sum(df$downloadCount))
 })
@@ -156,7 +156,7 @@ ggplot(.download) + aes(x = portal, y = downloads) + geom_point() + coord_flip()
 
 Do any of them have few datasets but get a lot of downloads?
 
-```
+```{r big.portals.density.scatter}
 ggplot(.download) + aes(x = datasets, y = downloads, color = portal) + geom_point() +
   scale_x_log10('Number of datasets', breaks = 10^(0:4)) +
   scale_y_log10('Number of dataset downloads', labels = comma, breaks = 10^c(2:9))
@@ -165,7 +165,7 @@ ggplot(.download) + aes(x = datasets, y = downloads, color = portal) + geom_poin
 Here's the same plot except with the portal names in the plot.
 This might be easier or harder to read.
 
-```
+```{r big.portals.density.text}
 ggplot(.download) + aes(x = datasets, y = downloads, label = portal) +
   geom_text() +
   scale_x_log10('Number of datasets', breaks = 10^(0:4)) +
@@ -175,18 +175,37 @@ ggplot(.download) + aes(x = datasets, y = downloads, label = portal) +
 What are the most popular datasets for each portal? Let's first do the one with
 the most downloads.
 
+```{r listify, echo = F}
+listify <- function(datasets) {
+  paste(
+    '<ul>',
+    paste(
+      '<li>',
+        '<a href="https://', datasets$portal, '/-/-/', datasets$id, '">', datasets$name, '</a>',
+        ' (', datasets$downloadCount, ' downloads)',
+      '</li>', sep = ''
+    ),
+    '</ul>',  
+    collapse = '\n'
+    )
+  )
+}
 ```
-ddply(socrata, 'portal', function(df) {
+
+```{r popular.by.portal.raw, asis = T}
+datasets <- ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount, decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
+listify(datasets)
 ```
 
 Next, let's do the one with the most downloads per time since published.
 
-```
+```{r popular.by.portal.density, asis = T}
 ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount / as.numeric(as.Date('2013-07-01') - df$createdAt), decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
+listify(datasets)
 ```
 
 
@@ -196,7 +215,7 @@ How tall and fat are these datasets?
 
 I thought it would be cool to show dataset size as a rectangle because datasets are tables.
 
-```
+```{r shapes.rect}
 ggplot(socrata) + aes(xmin = 0, ymin = 0, xmax = ncol, ymax = nrow, fill = portal) +
   geom_rect(alpha = 0.1) +
   scale_x_log10('Number of columns', labels = comma) + 
@@ -205,7 +224,7 @@ ggplot(socrata) + aes(xmin = 0, ymin = 0, xmax = ncol, ymax = nrow, fill = porta
 
 But that looks bad, so let's do it as points.
 
-```
+```{r shapes.scatter}
 ggplot(socrata) + aes(x = ncol, y = nrow, fill = portal) +
   geom_point(alpha = 0.5) +
   scale_x_log10('Number of columns', labels = comma) + 
@@ -213,8 +232,8 @@ ggplot(socrata) + aes(x = ncol, y = nrow, fill = portal) +
 ```
 
 Some datasets have no rows nor columns.
-```
-socrata[(socrata$nrow == 0 && socrata$ncol == 0),]
+```{r deleted}
+socrata[(socrata$nrow == 0 & socrata$ncol == 0),]
 ```
 
 These appear to be listed as deleted.
@@ -222,7 +241,7 @@ These appear to be listed as deleted.
 
 Now let's look at average dataset size by portal (ncol, nrow, ncol * nrow)
 
-```
+```{r dataset.size.by.portal}
 .sizes <- ddply(socrata, 'portal', function(df) {
   c(ncol = mean(df$ncol), 
     nrow = mean(df$nrow), 
@@ -241,11 +260,9 @@ What does the growth of downloads of a dataset look like? We don't have the data
 for individual datasets, but we can compare the current download counts between
 old datasets and new datasets.
 
-
-
 Has dataset size changed over the past couple years?
 
-```
+```{r datasets.size.over.time}
 base <- ggplot(socrata) + aes(x = createdAt, group = portal) +
   geom_point() + scale_y_log10(labels = comma)
 
@@ -255,12 +272,12 @@ base + aes(y = nrow * ncol)
 ```
 
 When did datasets get uploaded?
-```
+```{r datasets.when.uploaded}
 ggplot(socrata) + aes(x = createdAt, group = portal, fill = portal) + geom_bar()
 ```
 
 On what days of the week do datasets get uploaded?
-```
+```{r datasets.day.of.week.uploaded}
 socrata$createdAt.dayOfWeek <- factor(
   strftime(socrata$createdAt, format = '%a'),
   levels = c('Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'))
@@ -275,13 +292,3 @@ I'm conducting more detailed studies around more pointed data portal considerati
 expect those to come out over the next few months. And I could use your help. If you
 use or publish open data, I'd love to talk and see what you would like to know about
 how open data get used; there's probably a lot we can learn from this dataset.
-
-```{r shape}
-ggplot(socrata) + aes(x = ncol, y = nrow, size = downloadCount, color = portal) + geom_point()
-```
-
-
-Popular datasets by portal
-
-  socrata[order(socrata$downloadCount, decreasing = T),][1:10,c('portal','id','nrow','ncol','downloadCount')]
-
