--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -175,23 +175,8 @@ ggplot(.download) + aes(x = datasets, y = downloads, label = portal) +
 What are the most popular datasets for each portal? Let's first do the one with
 the most downloads.
 
-```{r listify, echo = F}
-listify <- function(datasets) {
-  paste(
-    '<ul>',
-    paste(
-      '<li>',
-        '<a href="https://', datasets$portal, '/-/-/', datasets$id, '">', datasets$name, '</a>',
-        ' (', datasets$downloadCount, ' downloads)',
-      '</li>', sep = ''
-    ),
-    '</ul>',  
-    collapse = '\n'
-  )
-}
 ```
-
-```{r popular.by.portal.raw, asis = T}
+{r popular.by.portal.raw, asis = T}
 datasets <- ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount, decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
@@ -200,7 +185,8 @@ listify(datasets)
 
 Next, let's do the one with the most downloads per time since published.
 
-```{r popular.by.portal.density, asis = T}
+```
+{r popular.by.portal.density, asis = T}
 ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount / as.numeric(as.Date('2013-07-01') - df$createdAt), decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
@@ -231,7 +217,8 @@ ggplot(socrata) + aes(x = ncol, y = nrow, fill = portal) +
 ```
 
 Some datasets have no rows nor columns.
-```{r deleted}
+```
+{r deleted}
 socrata[(socrata$nrow == 0 & socrata$ncol == 0),]
 ```
 
