--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -4,6 +4,9 @@ tags: ['socrata']
 ---
 <% root = 'https://github.com/tlevine/socrata-analysis/tree/master/' %>
 <style>article img { width: 100%; margin-left: 0; margin-right: 0; }</style>
+```{r configure, echo = F}
+opts_chunk$set(fig.width=10, fig.height=6, dip = 42 * 3)
+```
 
 I downloaded the metadata files for most of the datasets across most of the Socrata data portals.
 Here I explain how I did that and present an summary of the sorts of data that we find in the portals.
@@ -38,6 +41,7 @@ else:
 
 domain = domain.replace('https://', '').replace('http://', '')
 ```
+{:.language-python}
 
 It turns out that the [opendata.socrata.com](https://opendata.socrata.com) portal isn't
  listed there, so I add that one manually.
@@ -142,6 +146,7 @@ ggplot(socrata) + aes(x = portal) + geom_bar() + coord_flip() +
   scale_y_log10('Number of datasets', breaks = 10^(0:4)) +
   scale_x_discrete('Data portal')
 ```
+{:.language-r}
 
 Which portals get the most downloads?
 
@@ -156,6 +161,7 @@ ggplot(.download) + aes(x = portal, y = downloads) + geom_point() + coord_flip()
   scale_y_log10('Number of dataset downloads', labels = comma, breaks = 10^c(2:9)) +
   scale_x_discrete('Data portal')
 ```
+{:.language-r}
 
 Do any of them have few datasets but get a lot of downloads?
 
@@ -164,6 +170,7 @@ ggplot(.download) + aes(x = datasets, y = downloads, color = portal) + geom_poin
   scale_x_log10('Number of datasets', breaks = 10^(0:4)) +
   scale_y_log10('Number of dataset downloads', labels = comma, breaks = 10^c(2:9))
 ```
+{:.language-r}
 
 Here's the same plot except with the portal names in the plot.
 This might be easier or harder to read.
@@ -174,6 +181,7 @@ ggplot(.download) + aes(x = datasets, y = downloads, label = portal) +
   scale_x_log10('Number of datasets', breaks = 10^(0:4)) +
   scale_y_log10('Number of dataset downloads', labels = comma, breaks = 10^c(2:9))
 ```
+{:.language-r}
 
 What are the most popular datasets for each portal? Let's first do the one with
 the most downloads.
@@ -184,6 +192,7 @@ datasets <- ddply(socrata, 'portal', function(df) {
 })
 print(listify(datasets))
 ```
+{:.language-r}
 
 Next, let's do the one with the most downloads per time since published.
 
@@ -193,6 +202,7 @@ ddply(socrata, 'portal', function(df) {
 })
 print(listify(datasets))
 ```
+{:.language-r}
 
 
 ### Dataset shapes
@@ -207,6 +217,7 @@ ggplot(socrata) + aes(xmin = 0, ymin = 0, xmax = ncol, ymax = nrow, fill = porta
   scale_x_log10('Number of columns', labels = comma) + 
   scale_y_log10('Number of rows', labels = comma)
 ```
+{:.language-r}
 
 But that looks bad, so let's do it as points.
 
@@ -216,6 +227,7 @@ ggplot(socrata) + aes(x = ncol, y = nrow, fill = portal) +
   scale_x_log10('Number of columns', labels = comma) + 
   scale_y_log10('Number of rows', labels = comma)
 ```
+{:.language-r}
 
 Some datasets have no rows nor columns. Here are ten of them.
 ```{r deleted}
@@ -223,6 +235,7 @@ deleted <- socrata[(socrata$nrow == 0 & socrata$ncol == 0),]
 set.seed(13984382)
 print(listify(sample.int(nrow(deleted), 10)))
 ```
+{:.language-r}
 
 These appear to be listed as deleted.
 
@@ -239,12 +252,17 @@ base <- ggplot(.sizes) + aes(y = portal, group = portal, color = portal) +
   geom_point() + scale_x_log10(labels = comma)
 base + aes(x = nrow)
 ```
+{:.language-r}
+
 ```{r dataset_size_by_portal_ncol}
 base + aes(y = ncol)
 ```
+{:.language-r}
+
 ```{r dataset_size_by_portal_ncell}
 base + aes(y = nrow * ncol)
 ```
+{:.language-r}
 
 
 ### Time
@@ -259,17 +277,24 @@ base <- ggplot(socrata) + aes(x = createdAt, group = portal) +
   geom_point() + scale_y_log10(labels = comma)
 base + aes(y = nrow)
 ```
+{:.language-r}
+
 ```{r datasets_size_over_time_ncol}
 base + aes(y = ncol)
 ```
+{:.language-r}
+
 ```{r datasets_size_over_time_ncell}
 base + aes(y = nrow * ncol)
 ```
+{:.language-r}
+
 
 When did datasets get uploaded?
 ```{r datasets_when_uploaded}
 ggplot(socrata) + aes(x = createdAt, group = portal, fill = portal) + geom_bar()
 ```
+{:.language-r}
 
 On what days of the week do datasets get uploaded?
 ```{r datasets_day_of_week_uploaded}
@@ -280,6 +305,7 @@ ggplot(socrata) + aes(x = createdAt.dayOfWeek, group = portal, fill = portal) +
   geom_bar() + scale_y_continuous('Dataset uploads', labels = comma) +
   scale_x_discrete('Day of the week')
 ```
+{:.language-r}
 
 
 ## Future plans
